Bug 412952 - Dolphin seems to add extra quotes when deleting trailing quote
Summary: Dolphin seems to add extra quotes when deleting trailing quote
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: search (other bugs)
Version First Reported In: 19.08.2
Platform: Manjaro Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL: https://forum.manjaro.org/t/testing-u...
Keywords:
Depends on:
Blocks:
 
Reported: 2019-10-14 22:19 UTC by Marco Parillo
Modified: 2019-11-29 15:35 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 19.12.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Marco Parillo 2019-10-14 22:19:51 UTC
SUMMARY


STEPS TO REPRODUCE
1. Open Dolphin
2. Click on Search
3. Type search string
4. Delete trailing quote

OBSERVED RESULT

The trailing quote is added back, with an additional opening quote

EXPECTED RESULT

Quotes should match.

SOFTWARE/OS VERSIONS

Linux/KDE Plasma: 

Operating System: Manjaro Linux 
KDE Plasma Version: 5.16.5
KDE Frameworks Version: 5.62.0
Qt Version: 5.13.1
Kernel Version: 4.19.79-1-MANJARO
OS Type: 64-bit
Processors: 2 × Intel® Core™2 Duo CPU T7300 @ 2.00GHz
Memory: 3.8 GiB of RAM
Comment 2 Adwait Thattey 2019-10-22 14:59:05 UTC
Confirmed on latest builds from the master branch.
on version 19.11.70
Comment 3 Ismael Asensio 2019-10-22 20:30:37 UTC
Staging patch in Phabricator: https://phabricator.kde.org/D24422
Comment 4 Ismael Asensio 2019-11-28 21:11:07 UTC
Git commit 6776fbc94760188daeca0ab30e49f645f225f008 by Ismael Asensio.
Committed on 28/11/2019 at 21:08.
Pushed by iasensio into branch 'release/19.12'.

fix(search): Fix baloo searchString parsing

Summary:
Fix the parsing of Baloo query `searchString` to represent its parameters properly
in the search box:
# Baloo terms (`rating`, `modified`) are added to the user search text: {F7575590}
# Extra quotes are added to the search text: https://bugs.kde.org/show_bug.cgi?id=412952

This revision supersedes D24422, by making the fixes on the new dolphin query model,
instead of directly on the UI.
FIXED IN: 19.11.90

Test Plan:
  - `bin/dolphinquerytest` passes without `XFAIL`s
  - Dolphin search box is not garbled by search terms or quotes

Reviewers: elvisangelaccio, bruns, ngraham, #dolphin

Reviewed By: elvisangelaccio

Subscribers: kfm-devel

Tags: #dolphin

Differential Revision: https://phabricator.kde.org/D25260

M  +22   -4    src/search/dolphinquery.cpp
M  +0    -18   src/tests/dolphinquerytest.cpp

https://commits.kde.org/dolphin/6776fbc94760188daeca0ab30e49f645f225f008